--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,11 @@
+@import './style/variables.scss';
 .App {
   width: 100%;
   height: 100vh;
   overflow-y: scroll;
   scroll-snap-type: y mandatory;
+  font-family: 'Montserrat';
+  color: $primaryText;
 
   .section {
     width: 100%;
@@ -10,5 +13,7 @@
     scroll-snap-align: start;
     scroll-snap-stop: always;
   }
+
+  
   
 }
