--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,5 @@
 @import './style/variables.scss';
+
 .App {
   width: 100%;
   height: 100vh;
@@ -7,13 +8,55 @@
   font-family: 'Montserrat';
   color: $primaryText;
 
+  @media (max-width:768px) {
+    scroll-snap-type: unset;
+  }
+
   .section {
     width: 100%;
     height: 100vh;
     scroll-snap-align: start;
     scroll-snap-stop: always;
+    
+    &-title {
+      font-size: 45px;
+      font-weight: bold;
+    }
+    &-description {
+      font-size: 25px;
+      font-weight: 400;
+    }
+
+    @media (max-width: 768px) {
+      &-title {
+        font-size: 25px;
+      }
+      &-description {
+        font-size: 20px;
+      }
+    }
   }
 
-  
+  .button {
+    display: inline-block;
+    border: 3px solid $whiteText;
+    width: 100%;
+    height: 77px;
+    background: transparent;
+    color: $whiteText;
+    font-size: 21px;
+    font-weight: bold;
+    transition: ease-in .15s;
+
+    &:hover {
+      border: 3px solid $primaryText;
+      background: $primaryText;
+    }
+
+    @media (max-width: 1200px) {
+      height: 50px;
+      font-size: 12px;
+    }
+  }
   
 }
