--- a/src/App.scss
+++ b/src/App.scss
@@ -58,5 +58,46 @@
       font-size: 12px;
     }
   }
+
+  .rounded-btn {
+    border-radius: 100%;
+    background-color: $whiteText;
+    position: relative;
+    border: none;
+    // transform-style: preserve-3d;
+
+    svg {
+      position: relative;
+      z-index: 2;
+    }
+
+    &:hover {
+      filter: drop-shadow(0px 1px 2.5px rgba(0,0,0,0.15 ));
+      border-color: rgba(0,0,0,0 );
+      border-width: 1px;
+      border-style: solid;  
+
+      svg path {
+        fill: $primaryText;
+        stroke: $primaryText;
+      }
+      
+      &::after {
+        content: "";
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translateX(-50%) translateY(-50%);
+        height: 110%;
+        width: 110%;
+        border-radius: 100%;
+        background-color: #fff;
+        opacity: 0.3;
+        z-index: 1;
+        filter: drop-shadow(0px 1px 2.5px rgba(0,0,0,0.15 ));
+  
+      }
+    }
+  }
   
 }
