--- a/src/App.scss
+++ b/src/App.scss
@@ -64,7 +64,11 @@
     background-color: $whiteText;
     position: relative;
     border: none;
-    // transform-style: preserve-3d;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
+
 
     svg {
       position: relative;
@@ -88,14 +92,13 @@
         top: 50%;
         left: 50%;
         transform: translateX(-50%) translateY(-50%);
-        height: 110%;
-        width: 110%;
+        height: 125%;
+        width: 125%;
         border-radius: 100%;
         background-color: #fff;
         opacity: 0.3;
         z-index: 1;
         filter: drop-shadow(0px 1px 2.5px rgba(0,0,0,0.15 ));
-  
       }
     }
   }
